--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 header{
     height:100px;
+    width: 100%;
     display: flex;
     justify-content: center;
     border-bottom: 2px solid black;
@@ -353,6 +354,4 @@ header{
 }
 .last h6{
   padding-right:20px;
-
 }
-
